--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "body-parser": "^1.18.2",
+    "bootbox": "^4.4.0",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "gulp-rm-lines": "0.0.9",
+    "jquery": "^3.2.1",
+    "mongodb": "^2.2.33",
+    "nthline": "^1.0.1",
+    "popups": "^1.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -29,8 +37,10 @@
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/bootbox": "^4.4.35",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.16",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
