--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "gulp-rm-lines": "0.0.9",
+    "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.33",
     "nthline": "^1.0.1",
